[tool.poetry]
name = "spice_melange"
version = "0.1.0"
description = "A utility library for SPICE."
authors = ["Gavin Medley <gavin.medley@lasp.colorado.edu>"]
maintainers = ["Gavin Medley <gavin.medley@lasp.colorado.edu>"]
license = "BSD-3-Clause"
readme = "README.md"
include = ["LICENSE.txt", "CITATION.cff"]
repository = "https://github.com/medley56/space_packet_parser"
homepage = ""
keywords = [
    "spice",
    "spice kernel",
    "furnsh",
    "naif",
    "nasa",
    "jpl",
    "spiceypy",
    "lasp",
    "university of colorado",
    "python"
]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
spiceypy = ">=4"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
pytest = "^7"
pytest-cov = ">=4"
pytest-randomly = "^3.10.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
